[package]
name = "static_cell"
version = "2.1.0"
edition = "2021"
description = "Statically allocated, initialized at runtime cell."
license = "MIT OR Apache-2.0"
repository = "https://github.com/embassy-rs/static-cell"

[dependencies]
portable-atomic = { version = "1.5.1" }

[features]
nightly = []

[package.metadata.docs.rs]
features = ["nightly"]
rustdoc-args = ["--cfg", "docsrs"]
